test/constBlockConsuming15_3.slq

def foo(x:ğ”¹){
	y:=dup(x);
	if y{
		z:=X(y); /// error
	}else{
		x:=H(x);
		z:=y;
	}
	return (x,z);
}
